'修改后台版权'

--- a/Application/Admin/View/Index/welcome.html
+++ b/Application/Admin/View/Index/welcome.html
@@ -137,14 +137,12 @@
 				        	<div class="info-box">
 					         	<table class="table table-bordered">
 					         		<tr>
-					         			<td>程序版本：</td><td>TPshop {$sys_info.version}</td>
+					         			<td>程序版本：</td><td>ydshop {$sys_info.version}</td>
 					         			<td>更新时间：</td><td>2016-05-01</td>
-					         			<td>程序开发：</td><td>深圳搜豹网络有限公司</td>			         			
+					         			<td>程序开发：</td><td>云狄网络有限公司</td>			         			
 					         		</tr>
 					         		<tr>
-					         			<td>版权所有：</td><td>深圳搜豹网络有限公司</td>
-					         			<td>官方授权：</td><td><a href="http://www.tp-shop.cn/" target="_blank">商业授权</a></td>
-					         			<td>官方论坛：</td><td><a href="http://www.tp-shop.cn/articleList_cat_id_31.html" target="_blank">TPshop交流论坛</a></td>
+					         			<td>版权所有：</td><td>云狄网络有限公司</td>
 					         		</tr>
 					         	</table>
 				         	</div>
@@ -153,7 +151,7 @@
                 </div>
           </div>
           <div class="callout callout-success">
-            <p> <b>TPshop</b>--( Thinkphp shop的简称 ) B2B2C 开源商城    包含(pc + wap + android + ios + 微商城)多终端 </p>
+            <p> <b>Copyright © 2016-2025 云狄B2B 版权所有 保留一切权利</b></p>
           </div>
      </section>
  </div>
