--- a/Template/mobile/new/Index/brand.html
+++ b/Template/mobile/new/Index/brand.html
@@ -4,7 +4,7 @@
     <meta name="Generator" content="TPSHOP"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>TPshop旗舰店-品牌街</title>
+    <title>YDshop</title>
     <meta name="Keywords" content=""/>
     <meta name="Description" content=""/>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
