--- a/Template/mobile/new/Public/header.html
+++ b/Template/mobile/new/Public/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html>
 <head>
-<meta name="Generator" content="TPSHOP v1.1" />
+<meta name="Generator" content="YDSHOP v1.1" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 <meta name="format-detection" content="telephone=no" />
@@ -12,8 +12,8 @@
 <title>{$tpshop_config['shop_info_store_title']}</title>
 <meta http-equiv="keywords" content="{$tpshop_config['shop_info_store_keyword']}" />
 <meta name="description" content="{$tpshop_config['shop_info_store_desc']}" />
-<meta name="Keywords" content="TPshop触屏版  TPshop 手机版" />
-<meta name="Description" content="TPshop触屏版   TPshop商城 "/>
+<meta name="Keywords" content="YDshop触屏版  YDshop 手机版" />
+<meta name="Description" content="YDshop触屏版   TPshop商城 "/>
 <link rel="stylesheet" href="__STATIC__/css/public.css">
 <link rel="stylesheet" href="__STATIC__/css/user.css">
 <script type="text/javascript" src="__STATIC__/js/jquery.js"></script>
