'后台细节修改'

--- a/Application/Admin/View/Public/header.html
+++ b/Application/Admin/View/Public/header.html
@@ -27,7 +27,7 @@
     <script src="__PUBLIC__/js/upgrade.js"></script>
 	<script src="__PUBLIC__/js/layer/layer.js"></script><!--弹窗js 参考文档 http://layer.layui.com/--> 
     <style type="text/css">
-    	#riframe{min-height:inherit !important}
+    	#riframe{min-height:inherit !important;}
     </style>
   </head>
 <body class="skin-green-light sidebar-mini" style="overflow-y:hidden;">
@@ -38,7 +38,7 @@
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <span class="logo-mini"><b></b></span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg"><img src="/Public/upload/logo/2016/11-17/582d639e02ae8.png" width="40" height="30">&nbsp;&nbsp;<b>TPshop</b></span>
+        <span class="logo-lg"><img src="/Public/upload/logo/2016/11-17/582d639e02ae8.png" width="40" height="30">&nbsp;&nbsp;<b>YDshop</b></span>
       </a>
       <!-- Header Navbar: style can be found in header.less -->
       <nav class="navbar navbar-static-top" role="navigation">
@@ -57,12 +57,7 @@
                       <span  style="color:#FF0;">{$upgradeMsg.0}&nbsp;</span>
                   </a>
                </li>
-           </if>
-<li>
-              <a href="javascript:void(0);">                  
-                  <span>多商家公测版</span>
-               </a>
-</li>           
+           </if>          
            <li>
               <a href="/index.php" target="_blank">
                   <i class="glyphicon glyphicon-home"></i>
