--- a/Public/pc/css/main2.css
+++ b/Public/pc/css/main2.css
@@ -142,7 +142,7 @@ footer{ margin:50px auto; font-size:14px; line-height:30px; text-align:center;}
 .prod{ width:1200px; margin:0 auto;}
 .prod h6{ height:50px; letter-spacing:0.05em; line-height:50px; font-size:12px;}
 .prod h6 span{ color:#008BB9;}
-.group{width:1200px;border:1px solid #cfcfcf;min-height:300px;margin:0 auto; overflow: hidden;}
+.group{width:1200px;border:1px solid #cfcfcf;/* min-height:300px; */margin:0 auto; overflow: hidden;}
 .row{position:relative;border-top:1px dashed #cfcfcf;min-height:50px;width:100%;}
 .row-first{border-top:none;}
 .head1{position:absolute;left:8px;color:#999;width:80px; overflow:hidden; min-height:100%; background:url(../images/head-1.jpg) repeat-y right center;}
