--- a/Public/pc/css/main2.css
+++ b/Public/pc/css/main2.css
@@ -352,6 +352,12 @@ footer{ margin:50px auto; font-size:14px; line-height:30px; text-align:center;}
 		#curTwo{display:none;}
 
 
-
+/**
+*	TP分页样式
+*/
+.page{display: table;margin: 10px auto;}
+.page .first,.prev,.num,.current,.next,.end{width: 50px;height: 50px;display: block;float: left;line-height: 50px;margin-left: -1px;text-align: center;border: 1px solid #008CC1;}
+.page .first:hover,.prev:hover,.num:hover,.current:hover,.next:hover,.end:hover{color: #fff;background-color: #008CC1;}
+.page .current{background-color: #008cc1;color:#fff;}
 
 
