--- a/Template/pc/yundi/User/footer.html
+++ b/Template/pc/yundi/User/footer.html
@@ -1,5 +1,5 @@
  
- <footer class="footer">
+ <footer class="footer" style='    margin-top: 50px;'>
     <div class="pr">
         <dl> 
           <dt>帮助中心</dt>
