--- a/Template/pc/yundi/Public/footer.html
+++ b/Template/pc/yundi/Public/footer.html
@@ -1,63 +1,43 @@
-<div class="fn-cms-footer">
-  <div class="m-footer-g">
-    <div class="footer-map">
-      <ul class="fn-clear">
-        <li class="map"><i class="footer-icon z-icon"></i><strong class="tit">正品低价</strong><br/>
-          <span class="desc">正品行货 品质保障</span>
-        </li>
-        <li class="line"></li>
-        <li class="map"><i class="footer-icon q-icon"></i><strong class="tit">品类齐全</strong><br/>
-          <span class="desc">品类齐全 选择丰富</span>
-        </li>
-        <li class="line"></li>
-        <li class="map"><i class="footer-icon k-icon"></i><strong class="tit">快速配送</strong><br/>
-          <span class="desc">多仓直发 极速配送</span>
-        </li>
-        <li class="line"></li>
-        <li class="map"><i class="footer-icon t-icon"></i><strong class="tit">售后无忧</strong><br/>
-          <span class="desc">7天无理由退货</span>
-        </li>
-      </ul>
+ 
+ <footer class="footer">
+    <div class="pr">
+        <dl> 
+          <dt>帮助中心</dt>
+          <dd><a href="#" target="_blank">卖家入门</a></dd>
+          <dd><a href="#" target="_blank">咋呼管理</a></dd>
+          <dd><a href="#" target="_blank">购物指南</a></dd>
+          <dd><a href="#" target="_blank">订单操作</a></dd>
+        </dl>
+        <dl> 
+          <dt>服务支持</dt>
+          <dd><a href="#" target="_blank">售后服务</a></dd>
+          <dd><a href="#" target="_blank">自助服务</a></dd>
+          <dd><a href="#" target="_blank">相关下载</a></dd>
+          <dd><a href="#" target="_blank">商家服务</a></dd>
+        </dl>
+        <dl> 
+          <dt>关于云狄</dt>
+          <dd><a href="#" target="_blank">了解运狄</a></dd>
+          <dd><a href="#" target="_blank">加入云狄</a></dd>
+          <dd><a href="#" target="_blank">联系我们</a></dd>
+          <dd><a href="#" target="_blank">未来发展</a></dd>
+        </dl>
+        <dl> 
+          <dt>关于我们</dt>
+          <dd><a href="#" target="_blank">新浪微博</a></dd>
+          <dd><a href="#" target="_blank">官方微信</a></dd>
+          <dd><a href="#" target="_blank">在线客服</a></dd>
+          <dd><a href="#" target="_blank">经营模式</a></dd>
+        </dl>
+        <dl class="right">
+          <h1>020-123456</h1>
+          <p>   周一至周日 9:00:18：00</p>
+          <p class="kf">24小时在线客服</p>
+        </dl>
     </div>
-    <div class="server-list">
-      <ul class="fn-clear">
-	    <tpshop sql="select * from `__PREFIX__article_cat` where parent_id = 2" key="k" item='v'>
-         <li><i class="list-icon icon{$k+1}"></i>
-          <dl class="list-item">
-            <dt>{$v[cat_name]}</dt>
-            <tpshop sql="select * from `__PREFIX__article` where cat_id = $v[cat_id]  and is_open=1" key="k2" item='v2'>
-            	<dd><a href="{:U('Home/Article/detail',array('article_id'=>$v2[article_id]))}">{$v2[title]}</a></dd>
-            </tpshop>
-          </dl>
-        </li>
- 		</tpshop>
-        <li class="app-item">
-          <p>TPshop官网</p>
-          <img width="90" height="90" title="" alt="TPshop网客户端" src="__STATIC__/images/qrcode_vmall_app01.png">
-        </li>
-      </ul>
-    </div>
-    <div class="site-info">
-      <div class="foot-nav">
-        <tpshop sql="select * from `__PREFIX__article` where cat_id = 5 and is_open=1" key="k" item='v'>
-          <a href="{:U('Home/Article/detail',array('article_id'=>$v[article_id]))}" target="_blank">{$v[title]}</a>|
-        </tpshop>
-	      <a href="{:U('Newjoin/index')}" target="_blank">商家入驻</a>| 
-	      <a href="{:U('Article/detail',array('article_id'=>19))}" target="_blank">招商标准</a>| 
-	      <a href="" style="cursor:default;text-decoration:none;">客服热线 {$tpshop_config['shop_info_phone']}</a>
-	  </div>
-      <div class="link">
-        <p>
-        Copyright © 2016-2025 {$tpshop_config['shop_info_store_name']}  版权所有 保留一切权利 备案号:{$tpshop_config['shop_info_record_no']}
-        
-        <!--您好,请您给TPshop留个友情链接-->
-        &nbsp;&nbsp;<a href="http://www.tp-shop.cn/">TPshop开源商城</a>
-        <!--您好,请您给TPshop留个友情链接-->         
-        </p>
-      </div>
-      <div class="inline-box logowall"><a href="" class="item shgs" target="_blank"></a><a href="" class="item shwl" target="_blank"></a><a href="" class="item cxwz" target="_blank"></a><a href="" class="item kxwz" target="_blank"></a><a href="" class="item hyyz" target="_blank"></a></div>
-    </div>
-  </div>
-</div>
-<script type="text/javascript" src="__STATIC__/js/jquery.lazyload.js"></script>
-<script type="text/javascript" src="__STATIC__/js/common.js"></script>
+     <h6>有情链接：<a href="#" target="_blank">百度</a>   <a href="#" target="_blank">  盛大在线</a></h6>
+     <footer>
+     广州云狄建站科技有限公司 版权所有<br />
+     粤ICP备09116842号
+ </footer>
+  </footer>
