--- a/Template/pc/yundi/User/header.html
+++ b/Template/pc/yundi/User/header.html
@@ -1,91 +1,108 @@
-<link href="__PUBLIC__/pc/css/public.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="__PUBLIC__/js/jquery-1.10.2.min.js"></script>
+<link href="__STATIC__/css/common_www.css" rel="stylesheet" type="text/css" />
+<link href="__STATIC__/css/public.css" rel="stylesheet" type="text/css" />
+<link href="__STATIC__/css/default.css" rel="stylesheet" type="text/css" />
+<link href="__STATIC__/css/art_skin_order.css" rel="stylesheet" type="text/css" />
+<link href="__STATIC__/css/common.css" rel="stylesheet" type="text/css" />
+<link href="__STATIC__/css/message.index.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="__STATIC__/css/minicart.css">
+<script  type="text/javascript" src="__STATIC__/js/jquery-1.9.0.min.js"></script>
 <script src="__PUBLIC__/js/global.js"></script>
-<script src="__PUBLIC__/js/layer/layer.js"></script> 
-<script src="__PUBLIC__/js/global.js"></script>
-<header class="head">
-    <!-- <div class="left">Hi，你好  kky</div> -->
-    <nav class="nav">
-      <ul> 
-         <li><a href="{:U('Home/user/reg')}" class='nologin' >注册</a><a href="{:U('Home/user/index')}" class="islogin userinfo" title="" target="_self"></a>
-         </li>
-         <span>|</span>
-          <li><a href="{:U('Home/user/login')}" class='nologin' >登录</a><a href="{:U('Home/user/logout')}" class='islogin' style="margin:0 10px;" title="退出" target="_self">退出</a></li>
-
-        <span>|</span>
-        <li><img src="__PUBLIC__/pc/images/index1.jpg" width="15" height="30"  alt=""/>&nbsp;&nbsp;<a href="{:U('Home/Cart/cart')}" target="_blank">购物车</a></li><span>|</span>
-        <li><a href="{:U('/Home/User/order_list')}" target="_blank">我的订单</a></li>
-      </ul>
-    </nav>
-  </header><!--顶部结束-->
-  <script type="text/javascript">
-    $(document).ready(function(){
-
-      var uname= getCookie('uname');
-      if(uname == ''){
-        $('.islogin').remove();
-        $('.nologin').show();
-      }else{
-        $('.nologin').remove();
-        $('.islogin').show();
-        $('.userinfo').html(decodeURIComponent(uname));
-      }
-  });
-
-  </script>
-  <div class="prol">
-    <figure>
-        <img src="__PUBLIC__/pc/images/pro1.gif" width="200" height="70"  alt=""/> 
-    </figure>
-    <section class="search1">
-       <div id="tab">
-      <div class="tabList">
-        <ul>
-            <li class="cur">产品</li>
-        </ul>
-      </div>
-        
-      <div class="tabCon">
-        <div class="cur">
-           <form name="sourch_form" id="sourch_form" method="post" action="{:U("/Home/Goods/search")}">
-            <input type="text" data-role="input-search" autocomplete="off" class="ssk" name="q" id="q" value="<?php echo I('q'); ?>" placeholder="搜索关键字"/>
-             <a data-role="btn" href="javascript:void(0);" class="but" onclick="if($.trim($('#q').val()) != '') $('#sourch_form').submit();"></a>
-            </form>
-            
-        </div>
-      </div>
-    </div>
-  </section>
-  </div>
-  <div class="pro">
-
-      <nav class="nav">
-        <ul>
-            <li class="yi"><a href="#" >所有分类</a>
-               <ul class="dyj">
-                <tpshop sql="select * from `__PREFIX__goods_category` where is_show = 1 and `level` = 1  limit 15" key="k" item='v'>
-                  <li class="one"><a href="{:U('Home/Goods/goodsList',array('id'=>$v[id]))}" >{$v.name}</a>
-                      <section>
-                        <foreach name='goods_category_tree[$v[id]]["tmenu"]' item='l'>
-                         <dl>
-                           <dt><a href="{:U('Home/Goods/goodsList',array('id'=>$l[id]))}" >{$l.name}</a></dt>
-                           <dd>
-                            <foreach name ='l.sub_menu' item = 's'>
-                             <a href="{:U('Home/Goods/goodsList',array('id'=>$s[id]))}" >{$s.name}</a>
-                             </foreach>   
-                           </dd>
-                         </dl>
-                        </foreach>
-                      </section>                  
-                  </li>
-                 </tpshop>
-               </ul><!--所有宝贝的弹出层-->
-            </li>
-             <tpshop sql="SELECT * FROM `__PREFIX__navigation` where is_show = 1 ORDER BY `sort` DESC limit 0,8" key="k" item='v'>
-               <li><a href="{$v[url]}" 
-                  <?php  if($_SERVER['REQUEST_URI']==str_replace('&amp;','&',$v[url])){ echo "class='menu-item menu-item-active'";}
-                  else{ echo "class='menu-item'"; } ?>> {$v[name]} </a></li>
-              </tpshop>
-        </ul>
-      </nav>
-  </div>
+<!--[if lt IE 9]>
+		<script src="js/html5.js"></script>
+		<![endif]-->
+<style type="text/css">
+#global-topbar .topbar-right #msg_center {
+	background: none;
+}
+.topbar-right #msg_center .tips {
+	position: absolute;
+	left: -30px;
+	top: 28px;
+	min-width: 70px;
+	max-width: 132px;
+	height: 20px;
+ *line-height: 19px;
+	border-radius: 2px;
+	padding: 0px 20px 0 10px;
+	background: #666;
+	color: #fff;/*display: none;*/
+}
+#msg_center .tips .tip-cnt {
+	color: #fff;
+	text-decoration: none;
+}
+#msg_center .tips .tip-cnt span {
+	display: block;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+.tips .tip-t {
+	position: absolute;
+	left: 72px;
+	top: -11px;
+	width: 0;
+	height: 0;
+	font-size: 0;
+	border-width: 6px;
+	border-style: dashed dashed solid dashed;
+	border-color: transparent transparent #666 transparent;
+}
+.tips .tip-times {
+	position: absolute;
+	display: block;
+	right: 5px;
+	top: 0px;
+	font-size: 16px;
+	font-style: normal;
+	color: #bfb5b5;
+	cursor: pointer;
+}
+.tips .tip-times:hover {
+	color: #fff;
+}
+#global-topbar .topbar-right #msg_center .num {
+	color: #f00;
+}
+#show_category {
+	float:left
+}
+.catagories {
+	display:none
+}
+#show_category:hover .catagories {
+	display:block
+}
+.catagory-detail {
+	display:none;
+	min-height:456px
+}
+#global-nav .catagories li:hover {
+	margin-right: -10px;
+	color: #fff;
+	background: #f22e00;
+}
+#global-nav .catagories li:hover h3 {
+	color:#FFF
+}
+#global-nav .catagories li h3 a:hover {
+	color:#FFF
+}
+ul.catagories li:hover:after {
+	content:"";
+	position:absolute;
+	border-right:2px solid #f22e00;
+	right:-2px;
+	height:30px;
+	z-index:199;
+}
+ul.catagories li:hover .catagory-detail {
+	display:block
+}
+.icon-feiniu:before{
+	content:'';
+	background-image:none;
+	display:none;
+}
+</style>
+<include file='Public/header' />
