--- a/Public/pc/css/main.css
+++ b/Public/pc/css/main.css
@@ -138,7 +138,7 @@ footer{ margin:50px auto; font-size:14px; line-height:30px; text-align:center;}
 .prod h6{ height:50px; letter-spacing:0.05em; line-height:50px; font-size:12px;}
 .prod h6 span{ color:#008BB9;}
 .group{width:1200px;border:1px solid #cfcfcf;min-height:300px;margin:0 auto; overflow: hidden;}
-.row{position:relative;border-top:1px dashed #cfcfcf;min-height:50px;width:100%;}
+.row{position:relative;margin-top: -1px;border-top:1px dashed #cfcfcf;min-height:50px;width:100%;}
 .row-first{border-top:none;}
 .head1{position:absolute;left:8px;color:#999;width:80px; overflow:hidden; min-height:100%; background:url(../images/head-1.jpg) repeat-y right center;}
 .head1 h5{font-weight:400; line-height: 40px;}
@@ -234,7 +234,7 @@ footer{ margin:50px auto; font-size:14px; line-height:30px; text-align:center;}
 .product p{ text-align:center; line-height:70px;}
 .footer{ width:100%; height:430px; background:#f3f3f3; margin:0; padding-top:50px;}
 .footer .pr{ width:1200px; height:200px; margin:0 auto; border-bottom:1px solid #c7c7c7;}
-.footer dl{ width:220px; height:200px; float:left;}
+.footer dl{     width: 150px; height:200px; float:left;}
 .footer dl dt{ height:60px; font-size:15px; line-height:60px;}
 .footer dl dd{ line-height:25px;}
 .footer dl dd a{ color:#757575;}
