--- a/Template/pc/yundi/Goods/footer.html
+++ b/Template/pc/yundi/Goods/footer.html
@@ -1,43 +1,14 @@
- 
- <footer class="footer">
+<footer class="footer">
     <div class="pr">
+      <tpshop sql="select * from `__PREFIX__article_cat` where parent_id = 2" key="k" item='v'>
         <dl> 
-          <dt>帮助中心</dt>
-          <dd><a href="#" target="_blank">卖家入门</a></dd>
-          <dd><a href="#" target="_blank">咋呼管理</a></dd>
-          <dd><a href="#" target="_blank">购物指南</a></dd>
-          <dd><a href="#" target="_blank">订单操作</a></dd>
+          <dt>{$v[cat_name]}</dt>
+          <tpshop sql="select * from `__PREFIX__article` where cat_id = $v[cat_id]  and is_open=1" key="k2" item='v2'>
+              <dd><a href="{:U('Home/Article/detail',array('article_id'=>$v2[article_id]))}">{$v2[title]}</a></dd>
+            </tpshop>
         </dl>
-        <dl> 
-          <dt>服务支持</dt>
-          <dd><a href="#" target="_blank">售后服务</a></dd>
-          <dd><a href="#" target="_blank">自助服务</a></dd>
-          <dd><a href="#" target="_blank">相关下载</a></dd>
-          <dd><a href="#" target="_blank">商家服务</a></dd>
-        </dl>
-        <dl> 
-          <dt>关于云狄</dt>
-          <dd><a href="#" target="_blank">了解运狄</a></dd>
-          <dd><a href="#" target="_blank">加入云狄</a></dd>
-          <dd><a href="#" target="_blank">联系我们</a></dd>
-          <dd><a href="#" target="_blank">未来发展</a></dd>
-        </dl>
-        <dl> 
-          <dt>关于我们</dt>
-          <dd><a href="#" target="_blank">新浪微博</a></dd>
-          <dd><a href="#" target="_blank">官方微信</a></dd>
-          <dd><a href="#" target="_blank">在线客服</a></dd>
-          <dd><a href="#" target="_blank">经营模式</a></dd>
-        </dl>
-        <dl class="right">
-          <h1>020-123456</h1>
-          <p>   周一至周日 9:00:18：00</p>
-          <p class="kf">24小时在线客服</p>
-        </dl>
+      </tpshop>
     </div>
-     <h6>有情链接：<a href="#" target="_blank">百度</a>   <a href="#" target="_blank">  盛大在线</a></h6>
-     <footer>
-     广州云狄建站科技有限公司 版权所有<br />
-     粤ICP备09116842号
- </footer>
-  </footer>
+    <!--  <h6>有情链接：<a href="#" target="_blank">百度</a>   <a href="#" target="_blank">  盛大在线</a></h6> -->
+     <footer>Copyright © 2016-2025 {$tpshop_config['shop_info_store_name']}  版权所有 保留一切权利 备案号:{$tpshop_config['shop_info_record_no']}</footer>
+</footer>
