--- a/Template/pc/yundi/Cart/cart2.html
+++ b/Template/pc/yundi/Cart/cart2.html
@@ -13,17 +13,12 @@
 <link rel="stylesheet" href="__STATIC__/css/jh.css">
 </head>
 <body>
-<include file="Public/sign-header"/>
+<include file="Public/header"/>
 <div class="fn-cart-confirm"> 
    <!-- cart-title -->
 	  <div class="wrapper1190">
 	     <div class="order-header">
 	    	<div class="layout after">
-	        	<div class="fl">
-	            	<div class="logo pa-to-36 wi345">
-	                	<a href="/"><img src="__STATIC__/images/newLogo.png" alt=""></a>
-	                </div>
-	            </div>
 	        	<div class="fr">
 	            	<div class="pa-to-36 progress-area">
 	                	<div class="progress-area-wd" style="display:none">我的购物车</div>
@@ -305,7 +300,7 @@
   </div>
 </div>
 <!-- end 提示配送商品 --> 
-<include file="Public/min-footer"/>
+<include file="Public/footer"/>
 <script>
 $(document).ready(function(){
 	ajax_address(); // 获取用户收货地址列表
