'商户模板修改'

--- a/Application/Admin/View/Public/header.html
+++ b/Application/Admin/View/Public/header.html
@@ -63,7 +63,7 @@
                   <i class="glyphicon glyphicon-home"></i>
                   <span>网站前台</span>
               </a>
-           </li>
+           </li>{:U('Home/Newjoin/index')}
            <li>
                <a target="rightContent" href="{:U('/Admin/System/cleanCache')}">
                    <i class="glyphicon glyphicon glyphicon-refresh"></i>
