--- a/Template/pc/yundi/Newjoin/agreement.html
+++ b/Template/pc/yundi/Newjoin/agreement.html
@@ -8,20 +8,8 @@
 <script type="text/javascript" src="__STATIC__/js/jquery-1.11.0.min.js"></script>
 </head>
 <body>
-<include file="Public/sign-header" /> 
-<div class="gome-wrap bg">
-	<div style="position: relative;top: -40px;left: 190px;">
-    	<a href="/" target="_blank" class="item fl"><img height="60" width="160" src="{$tpshop_config['shop_info_store_logo']}"></a>
-    </div>
-	<div class="gome-layout-area">
-        <ul class="gome-nav">
-        	<li><a href="{:U('Newjoin/index')}" target="_blank">招商首页</a></li>
-        	<tpshop sql="select * from `__PREFIX__article_cat` where parent_id=2" key="k" item='v'>
-            	<li><a href="{:U('Newjoin/question',array('cat_id'=>$v[cat_id]))}" target="_blank">{$v.cat_name}</a></li>
-            </tpshop>
-        </ul>
-    </div>
-</div>
+<include file="Public/header" /> 
+
 	<form action="" id="queryForm" name="query" method="post">
     <div class="gome-layout-area pb50 clearfix">
     	<ul class="steps clearfix">
@@ -141,7 +129,7 @@
         </div>
     </div>
 </form>
-<include file="Public/min-footer" /> 
+<include file="Public/footer" /> 
 <!--footerEnd-->
 	<script language="javascript">
 		function nextStep() {
