--- a/Template/pc/yundi/Newjoin/apply_info.html
+++ b/Template/pc/yundi/Newjoin/apply_info.html
@@ -86,20 +86,20 @@ a.btn-primary:hover, .btn-primary:hover {color: #fff;background-color: #ee3f36;b
 </style>
 </head>
 <body>
-<include file="Public/sign-header" /> 
-<div class="gome-wrap bg">
-	<div style="position: relative;top: -40px;left: 190px;">
-    	<a href="/" target="_blank" class="item fl"><img height="60" width="160" src="{$tpshop_config['shop_info_store_logo']}"></a>
+<include file="Public/header" /> 
+<!-- <div class="gome-wrap bg">
+    <div style="position: relative;top: -40px;left: 190px;">
+        <a href="/" target="_blank" class="item fl"><img height="60" width="160" src="{$tpshop_config['shop_info_store_logo']}"></a>
     </div>
-	<div class="gome-layout-area">
+    <div class="gome-layout-area">
         <ul class="gome-nav">
             <li><a href="{:U('Newjoin/index')}" target="_blank">招商首页</a></li>
-        	<tpshop sql="select * from `__PREFIX__article_cat` where parent_id=2" key="k" item='v'>
-            	<li><a href="{:U('Newjoin/question',array('cat_id'=>$v[cat_id]))}" target="_blank">{$v.cat_name}</a></li>
+            <tpshop sql="select * from `__PREFIX__article_cat` where parent_id=2" key="k" item='v'>
+                <li><a href="{:U('Newjoin/question',array('cat_id'=>$v[cat_id]))}" target="_blank">{$v.cat_name}</a></li>
             </tpshop>
         </ul>
     </div>
-</div>
+</div> -->
 <div class="gome-layout-area pb50 clearfix">
     	<ul class="steps clearfix">
         	<li class="first prev ok"><b>1</b><span class="going"></span><em class="f">入驻须知</em></li>
@@ -172,6 +172,6 @@ a.btn-primary:hover, .btn-primary:hover {color: #fff;background-color: #ee3f36;b
   </div>
 </div>
 </div>
-<include file="Public/min-footer" /> 
+<include file="Public/footer" /> 
 </body>
 </html>
