--- a/Template/pc/yundi/Public/header.html
+++ b/Template/pc/yundi/Public/header.html
@@ -17,6 +17,8 @@
         <span>|</span>
         <li><img src="__PUBLIC__/pc/images/index1.jpg" width="15" height="30"  alt=""/>&nbsp;&nbsp;<a href="{:U('/Cart/cart')}" target="_blank">购物车</a></li><span>|</span>
         <li><a href="{:U('/User/order_list')}" target="_blank">我的订单</a></li>
+        <span>|</span>
+        <li><a href="{:U('/Newjoin/index')}" target="_blank">商家入驻</a></li>
       </ul>
     </nav>
   </header><!--顶部结束-->
