--- a/Application/Seller/View/Store/navigation.html
+++ b/Application/Seller/View/Store/navigation.html
@@ -77,6 +77,20 @@
                                    
                                 </tr>
                                 <tr>
+                                    <td>关键词：</td>
+                                    <td>
+                                        <input type="text" class="form-control" name="sn_keyword" value="{$info.sn_keyword}" >
+                                    </td>
+                                   
+                                </tr>
+                                <tr>
+                                    <td>描述：</td>
+                                    <td>
+                                        <textarea type="text" class="form-control" name="sn_description" rows="2" >{$info.sn_description}</textarea>
+                                    </td>
+                                   
+                                </tr>
+                                <tr>
 
                                     <td>banner图片：</td>
                                     <td>
