修改单页面

--- a/Application/Seller/View/News/NewsList.html
+++ b/Application/Seller/View/News/NewsList.html
@@ -9,7 +9,7 @@
 	           	<div class="box-header">
 	               <nav class="navbar navbar-default">	     
 				        <div class="collapse navbar-collapse">
-				          <form class="navbar-form form-inline" action="{:U('News/NewsList')}" method="get">
+				          <form class="navbar-form form-inline" action="{:U('News/newslist')}" method="get">
 				            <div class="form-group">
 				              	<select name='type' class='form-control'>
 				              		<option value='0'>所有</option>
