--- a/Application/Seller/View/Goods/ajaxGoodsList.html
+++ b/Application/Seller/View/Goods/ajaxGoodsList.html
@@ -29,6 +29,12 @@
                  <td class="text-center">
                     <a href="javascript:sort('is_recommend');">推荐</a>
                 </td>
+                 <td class="text-center">
+                    <a href="javascript:sort('is_new');">新品</a>
+                </td>
+                 <td class="text-center">
+                    <a href="javascript:sort('is_hot');">热销</a>
+                </td>
 
                 <td class="text-left">
                     <a href="javascript:void(0);">库存</a>
@@ -59,10 +65,17 @@
                     </td> 
                      <td class="text-center">                        
                         <img width="20" height="20" src="__PUBLIC__/images/<if condition='$list[is_recommend] eq 1'>yes.png<else />cancel.png</if>" onclick="changeTableVal2('goods','goods_id','{$list.goods_id}','is_recommend',this)"/>
-                    </td>                    
+                    </td>      
+                     <td class="text-center">                        
+                        <img width="20" height="20" src="__PUBLIC__/images/<if condition='$list[is_new] eq 1'>yes.png<else />cancel.png</if>" onclick="changeTableVal2('goods','goods_id','{$list.goods_id}','is_new',this)"/>
+                    </td>         
+                     <td class="text-center">                        
+                        <img width="20" height="20" src="__PUBLIC__/images/<if condition='$list[is_hot] eq 1'>yes.png<else />cancel.png</if>" onclick="changeTableVal2('goods','goods_id','{$list.goods_id}','is_hot',this)"/>
+                    </td>         
                     <td class="text-left">
                     <input type="text" onkeyup="this.value=this.value.replace(/[^\d.]/g,'')" onpaste="this.value=this.value.replace(/[^\d.]/g,'')"  onchange="ajaxUpdateField2(this);" name="store_count" size="4" data-table="goods" data-id="{$list.goods_id}" value="{$list.store_count}"/>   
-                    </td>                    
+                    </td>    
+                                    
                     <td class="text-center">                         
                         <input type="text" onkeyup="this.value=this.value.replace(/[^\d]/g,'')" onpaste="this.value=this.value.replace(/[^\d]/g,'')" onchange="updateSort2('goods','goods_id','{$list.goods_id}','sort',this)" size="4" value="{$list.sort}" />
                     </td>
